fixed z-index

--- a/docroot/themes/custom/ucsf_mag/assets/css/style.css
+++ b/docroot/themes/custom/ucsf_mag/assets/css/style.css
@@ -249,8 +249,7 @@ html {
     right: 0;
     left: 0;
     bottom: 0;
-    width: 100%;
-    z-index: 1000; }
+    width: 100%; }
     @media (min-width: 600px) {
       .header--search-active ~ .mag-menu {
         top: calc(72px + 162px + 40px); } }
@@ -261,8 +260,7 @@ html {
         bottom: auto;
         left: 50%;
         margin-left: -50vw;
-        width: 100vw;
-        z-index: 1; } }
+        width: 100vw; } }
   .mag-menu__menu {
     display: grid;
     grid-template-areas: "latest" "features" "insights" "voices" "allissues" "popular" "collections";
