--- a/docroot/themes/custom/ucsf_mag/scss/navigation/_main-menu.scss
+++ b/docroot/themes/custom/ucsf_mag/scss/navigation/_main-menu.scss
@@ -76,7 +76,6 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    z-index: 1000;
 
     @include breakpoint ($bp-medium) {
       top: calc(#{$mag-navbar-height-medium} + #{$mag-search-form-height} + #{$universal-header-height});
@@ -89,7 +88,6 @@
       left: 50%;
       margin-left: -50vw;
       width: 100vw;
-      z-index: 1;
     }
   }
 
